@@ -118,7 +118,7 @@ public class FuseImplTest {
 				MemorySegment mp = invocation.getArgument(1);
 				MemorySegment mt = invocation.getArgument(2);
 				MemorySegment fg = invocation.getArgument(3);
-				mp.set(ValueLayout.ADDRESS, 0L, arena.allocateUtf8String("/mount/point"));
+				mp.set(ValueLayout.ADDRESS, 0L, arena.allocateFrom("/mount/point"));
 				mt.set(JAVA_INT, 0L, 1);
 				fg.set(JAVA_INT, 0L, 1);
 				return 0;
@@ -142,7 +142,7 @@ public class FuseImplTest {
 		@DisplayName("flush(\"/foo\", fi)")
 		public void testFlush() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
+				var path = arena.allocateFrom("/foo");
 				var fi = fuse3_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).flush(Mockito.eq("/foo"), Mockito.any());
 
@@ -156,7 +156,7 @@ public class FuseImplTest {
 		@DisplayName("fsync(\"/foo\", 1, fi)")
 		public void testFsync() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
+				var path = arena.allocateFrom("/foo");
 				var fi = fuse3_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).fsync(Mockito.eq("/foo"), Mockito.eq(1), Mockito.any());
 
@@ -170,7 +170,7 @@ public class FuseImplTest {
 		@DisplayName("fsyncdir(\"/foo\", 1, fi)")
 		public void testFsyncdir() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
+				var path = arena.allocateFrom("/foo");
 				var fi = fuse3_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).fsyncdir(Mockito.eq("/foo"), Mockito.eq(1), Mockito.any());
 
@@ -211,13 +211,13 @@ public class FuseImplTest {
 		Instant expectedATime = Instant.ofEpochSecond(sec0, nsec0);
 		Instant expectedMTime = Instant.ofEpochSecond(sec1, nsec1);
 		try (var arena = Arena.ofConfined()) {
-			var path = arena.allocateUtf8String("/foo");
+			var path = arena.allocateFrom("/foo");
 			var times = fuse_timespec.allocateArray(2, arena);
-			var fi = arena.allocate(fuse3_file_info.$LAYOUT());
-			fuse_timespec.tv_sec$set(times, 0, sec0);
-			fuse_timespec.tv_nsec$set(times, 0, nsec0);
-			fuse_timespec.tv_sec$set(times, 1, sec1);
-			fuse_timespec.tv_nsec$set(times, 1, nsec1);
+			var fi = fuse3_file_info.allocate(arena);
+			fuse_timespec.tv_sec(fuse_timespec.asSlice(times, 0), sec0);
+			fuse_timespec.tv_nsec(fuse_timespec.asSlice(times, 0), nsec0);
+			fuse_timespec.tv_sec(fuse_timespec.asSlice(times, 1), sec1);
+			fuse_timespec.tv_nsec(fuse_timespec.asSlice(times, 1), nsec1);
 			Mockito.doReturn(42).when(fuseOps).utimens(Mockito.eq("/foo"), Mockito.argThat(t -> expectedATime.equals(t.get())), Mockito.argThat(t -> expectedMTime.equals(t.get())), Mockito.argThat(usesSameMemorySegement(fi)));
 
 			var result = fuseImpl.utimens(path, times, fi);
@@ -234,9 +234,9 @@ public class FuseImplTest {
 		@DisplayName("getattr")
 		public void testGetattr() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
+				var path = arena.allocateFrom("/foo");
 				var attr = fuse_stat.allocate(arena);
-				var fi = arena.allocate(fuse3_file_info.$LAYOUT());
+				var fi = fuse3_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).getattr(Mockito.eq("/foo"), Mockito.any(), Mockito.argThat(usesSameMemorySegement(fi)));
 
 				var result = fuseImpl.getattr(path, attr, fi);
@@ -249,8 +249,8 @@ public class FuseImplTest {
 		@DisplayName("getxattr")
 		public void testGetxattr() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
-				var name = arena.allocateUtf8String("bar");
+				var path = arena.allocateFrom("/foo");
+				var name = arena.allocateFrom("bar");
 				var value = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).getxattr(Mockito.eq("/foo"), Mockito.eq("bar"), Mockito.any());
@@ -265,8 +265,8 @@ public class FuseImplTest {
 		@DisplayName("setxattr")
 		public void testSetxattr() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
-				var name = arena.allocateUtf8String("bar");
+				var path = arena.allocateFrom("/foo");
+				var name = arena.allocateFrom("bar");
 				var value = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).setxattr(Mockito.eq("/foo"), Mockito.eq("bar"), Mockito.any(), Mockito.anyInt());
@@ -281,7 +281,7 @@ public class FuseImplTest {
 		@DisplayName("listxattr")
 		public void testListxattr() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
+				var path = arena.allocateFrom("/foo");
 				var list = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).listxattr(Mockito.eq("/foo"), Mockito.any());
@@ -296,8 +296,8 @@ public class FuseImplTest {
 		@DisplayName("removexattr")
 		public void testRemovexattr() {
 			try (var arena = Arena.ofConfined()) {
-				var path = arena.allocateUtf8String("/foo");
-				var name = arena.allocateUtf8String("bar");
+				var path = arena.allocateFrom("/foo");
+				var name = arena.allocateFrom("bar");
 
 				Mockito.doReturn(42).when(fuseOps).removexattr(Mockito.eq("/foo"), Mockito.eq("bar"));
 
@@ -314,8 +314,8 @@ public class FuseImplTest {
 	@DisplayName("truncate")
 	public void testTruncate() {
 		try (var arena = Arena.ofConfined()) {
-			var path = arena.allocateUtf8String("/foo");
-			var fi = arena.allocate(fuse3_file_info.$LAYOUT());
+			var path = arena.allocateFrom("/foo");
+			var fi = fuse3_file_info.allocate(arena);
 			Mockito.doReturn(42).when(fuseOps).truncate(Mockito.eq("/foo"), Mockito.eq(1337L), Mockito.argThat(usesSameMemorySegement(fi)));
 
 			var result = fuseImpl.truncate(path, 1337L, fi);
@@ -328,7 +328,7 @@ public class FuseImplTest {
 	@DisplayName("chown")
 	public void testChown() {
 		try (var arena = Arena.ofConfined()) {
-			var path = arena.allocateUtf8String("/foo");
+			var path = arena.allocateFrom("/foo");
 			var fi = fuse3_file_info.allocate(arena);
 			Mockito.doReturn(42).when(fuseOps).chown(Mockito.eq("/foo"), Mockito.eq(42), Mockito.eq(1337), Mockito.any());
 
